# stack_help_gtk_window

./: CMakeLists.txt  COMPILE.md  README.md
resources/: window.glade
sources/: Makefile  main.c  stack_help_gtk_window.c  stack_help_gtk_window.h
